FIXUP WIP Styles

--- a/nextgisweb/webmap/nodepkg/map-component/control/ToggleControl.less
+++ b/nextgisweb/webmap/nodepkg/map-component/control/ToggleControl.less
@@ -1,8 +1,8 @@
 .toggle-on {
-    background-color: var(--primary);
-    color: var(--on-primary-text);
+    background-color: var(--theme-color-primary);
+    color: var(--theme-color-text-light-solid);
 
-    .custom-button-control {
-        color: var(--on-primary-text);
+    > button {
+        color: var(--theme-color-text-light-solid);
     }
 }
