--- a/nextgisweb/pyramid/nodepkg/company-logo/CompanyLogoControl.less
+++ b/nextgisweb/pyramid/nodepkg/company-logo/CompanyLogoControl.less
@@ -1,6 +1,7 @@
 .map-logo {
     display: inline-block;
     z-index: 10;
+    margin-inline-end: 8px;
     line-height: 1;
     text-decoration: none;
 
