--- a/nextgisweb/webmap/nodepkg/control-container/ControlContainer.less
+++ b/nextgisweb/webmap/nodepkg/control-container/ControlContainer.less
@@ -47,6 +47,7 @@
 
     > div:last-child > .mapadapter-ctrl {
         background-color: var(--ol-partial-background-color);
+        color: var(--ol-subtle-foreground-color);
 
         .mapadapter-ctrl-margin {
             margin-inline-end: 8px;
