--- a/nextgisweb/webmap/nodepkg/ol/panel-control/PanelControl.less
+++ b/nextgisweb/webmap/nodepkg/ol/panel-control/PanelControl.less
@@ -1,5 +1,3 @@
-/* Openlayers fixes */
-
 .mapadapter-control-container {
     --ol-partial-background-color: rgba(255, 255, 255, 0.5);
     --ol-subtle-background-color: rgba(255, 255, 255, 0.5);
@@ -38,6 +36,7 @@
 
         > .ol-scale-line-inner {
             float: unset;
+            color: var(--ol-subtle-foreground-color);
         }
     }
 }
